[gd_scene load_steps=6 format=2]

[ext_resource path="res://Bullet_player/bullet_player.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://luz redemoinho.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "glow"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bullet_blue:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 274.432, 1509.79, 21.238, 32.4988 ), Rect2( 274.432, 1509.79, 21.238, 32.4988 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bullet_blue:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0002, 270.0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.64506
height = 9.18834

[node name="bullet_player" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.235762, -0.129647 )
scale = Vector2( 0.673157, 0.694045 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "glow"
anims/glow = SubResource( 1 )

[node name="bullet_blue" type="Sprite" parent="."]
modulate = Color( 0.980392, 1, 0.333333, 0.447059 )
rotation = 4.71239
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 274.432, 1509.79, 21.238, 32.4988 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="luz" type="Light2D" parent="."]
scale = Vector2( 0.05, 0.1 )
texture = ExtResource( 3 )
color = Color( 0.992157, 0.988235, 0.976471, 1 )
[connection signal="area_entered" from="." to="." method="_on_bullet_player_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
